<?xml version="1.0"?>
<package format="2">
  <name>knowrob_giskard</name>
  <version>0.0.0</version>
  <description>The knowrob_giskard package</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>knowrob_common</depend>

</package>
